fix modal visibility

--- a/src/features/chooseDateModal/ChooseDateModal.module.css
+++ b/src/features/chooseDateModal/ChooseDateModal.module.css
@@ -7,5 +7,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 30px 10px 10px;
+  top: 35px;
 }
